--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>Stage</h1>
+<h1>Staging Server</h1>
 
-<p>Stage Environment</p>
+<p>This is Stage Environment</p>
 
 </body>
 </html>
