--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>Staging</h1>
+<h1>Development Server</h1>
 
-<p>Stage Environment</p>
+<p>This is lower Environment</p>
 
 </body>
 </html>
