--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Development Server</h1>
 
 <p>This is lower Environment</p>
-<p>This is a html web server</p>
+<p>This is a web server</p>
 
 </body>
 </html>
