--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <body>
 
-<h1>Development Server</h1>
+<h1>Main Server</h1>
 
-<p>This is lower Environment</p>
 <p>This is a html web server</p>
 
 </body>
